monitor/access/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-prometheus
  namespace: monitoring
spec:
  rules:
    - host: monitoring-prometheus.test.com
      http:
        paths:
          - backend:
              service:
                name: prometheus-k8s
                port:
                  number: 9090
            path: /
            pathType: ImplementationSpecific
